--- a/client/src/Component/Admin Page/AdminNavbar/AdminNavbar.css
+++ b/client/src/Component/Admin Page/AdminNavbar/AdminNavbar.css
@@ -4,5 +4,13 @@
 .navbar {
     font-family: 'K2D', sans-serif;
 	font-family: 'Pridi', serif;
+    font-size: 20px;
     color: #ffffff;
 } 
+.active {
+    overflow:hidden;
+    border-bottom:3px solid rgb(255, 255, 255);
+    
+    padding:8px;
+    /* background-color:#0853a3; */
+}
