--- a/client/src/Component/Pages/Login/Style/Login.css
+++ b/client/src/Component/Pages/Login/Style/Login.css
@@ -1,6 +1,6 @@
 body {
 	font-family: "open sans", helvetica, arial, sans;
-	background: url(https://e0.pxfuel.com/wallpapers/314/922/desktop-wallpaper-leaderfit-homepage-blue-banner-thumbnail.jpg) no-repeat center center fixed;
+	background: url(https://img.freepik.com/premium-vector/modern-dark-blue-abstract-background-paper-shine-layer-element-vector-presentation-design-suit-business-corporate-institution-party-festive-seminar-talks_249611-3001.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
