--- a/client/src/Component/Admin Page/AdminEmployee/AdminEmployee.css
+++ b/client/src/Component/Admin Page/AdminEmployee/AdminEmployee.css
@@ -1,7 +1,8 @@
 .middle {
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 40px;
+    margin-right: 40px;
     font-family: 'K2D', sans-serif;
 	font-family: 'Pridi', serif;
     color: #ffffff;
+    font-size: 20px;
 }
