--- a/client/src/Component/Admin Page/AdminEmployee/AddEmployee.css
+++ b/client/src/Component/Admin Page/AdminEmployee/AddEmployee.css
@@ -15,6 +15,12 @@
     width: 100%;
     max-width: 80%;
     padding: 2rem;
-    /* margin: auto; */
+    border-radius: 25px;
     background-color: #f3f3f3;
   }
+
+  .imgupload {
+    width: "auto";
+    margin: 10px;
+    height: 250px;
+   }
